--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ requests
 scrapy
 signals
 xsstrike
-git+https://github.com/cortantief/LFITester.git
+lfi-tester @ git+https://github.com/cortantief/LFITester.git@main
 sqlmap
 pdfkit
 matplotlib
